@@ -1,3 +1,10 @@
+Fri Aug 20 20:03:03 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.cpp:
+
+          If a locality is terminated unexpectedly, don't try to call shutdown
+          during a scheduled teardown on that instance.
+
 Fri Aug 20 20:01:55 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * ciao/Deployment/Handlers/Connection_Handler.cpp:
